@@ -1,3 +1,8 @@
+2007-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Add tabs to Options dialog (with suitable non-tile
+	fallback). Add save hooks for extensions to use.
+
 2007-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:       Ignore groupchat messages with empty bodies 
